# calculator

./: CMakeLists.txt
apps/miscellaneous/: CMakeLists.txt  main.cpp
apps/simple/: CMakeLists.txt
